--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"        
+        "php": ">=5.4.0",
+        "axy/crypt": "~0.1.0"
     },
     "autoload": {
         "psr-4": {
