--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "axy/crypt": "~0.1.0"
+        "axy/crypt": "~0.1.0",
+        "axy/errors": "~1.0.4"
     },
     "autoload": {
         "psr-4": {
